--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --verde: #6FFF57;
   --branco: #FFFFFF;
 --botao-ativo: #3A375E;
---botao-ativo: rgba(58, 55, 94, 0.5);
+--botao-inativo: rgba(58, 55, 94, 0.5);
 --texto-fundo: rgba(58, 55, 94, 0.3);
  }
 
@@ -13,4 +13,65 @@
     background-color: var(--cor-de-fundo);
     color: var(--branco);
     font-family: "Chakra Petch", sans-serif;
+ } 
+
+ 
+ .conteudo-principal{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.titulo-principal{
+  text-align: left;
+  width: 100%;
+  font-size: 32px;
+}
+
+.titulo-principal span{
+  color: var(--verde);
+}
+
+  
+.botao{
+    font-family: "chackra petch",sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;ont-family: "Chakra Petch", sans-serif;
+  }
+
+ .botao:first-child{
+  border-radius: 40px 40px 0 0;
  }
+ 
+ .botoes{
+      display: block;
+ }
+  
+ .ativo{
+  background-color: var(--botao-ativo);
+border-bottom: 4px solid var(--verde);
+}
+
+ @media screen and (min--width: 780px) {
+    .botoes{
+       display: flex;
+    }
+ .botao:first-child{
+  border-radius: 40px 0 0 0;
+ }
+ 
+  .botao:last-child{
+  border-radius: 0 40px 0 0;
+ }
+
+}
